cmake_minimum_required(VERSION 3.0)

project("estl-Boost")
set(CMAKE_MODULE_PATH "${CMAKE_HOME_DIRECTORY}/../cmake")

add_subdirectory(bufferstream)
add_subdirectory(circular_buffer)
add_subdirectory(convert)
add_subdirectory(datetime)
add_subdirectory(filesystem)
add_subdirectory(format)
add_subdirectory(interpress)
add_subdirectory(program_options)
add_subdirectory(signal)
add_subdirectory(uuid)
add_subdirectory(dll)
add_subdirectory(static_string)
#add_subdirectory(beast)
##add_subdirectory(log)